--- a/inst/shiny/help/helpData.html
+++ b/inst/shiny/help/helpData.html
@@ -41,7 +41,7 @@
     The figure below illustrates an expression input file:
 </p>
 
-<img src="images/exprData.png" width="795">
+<img src="https://github.com/jardimViniciusC/BioNetStat/raw/master/inst/shiny/www/images/exprData.png" width="795">
 
 <h5>Variable set database (*.gmt)</h5>
 
@@ -49,7 +49,7 @@
     The variable set database file describes the groups of variables that will be analyzed. The columns are tab delimited. Each row corresponds to a variable set. The first column describes the variable set name, the second one could contains a variable set description, and the following columns contain the variables that belong to the set. The file must have the *.gmt extension and is illustrated by the figure below:
 </p>
 
-<img src="images/geneSetData.png"  width="795">
+<img src="https://github.com/jardimViniciusC/BioNetStat/raw/master/inst/shiny/www/images/geneSetData.png"  width="795">
 
 <p>
     </br>
